Changed the package name again, with the necessary changes to the associated files as required by google play console

--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -6,7 +6,7 @@
     android:id="@+id/product_feed_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductFeedActivity">
+    tools:context="com.fit3162.scannera_app.ProductFeedActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/product_feed_constraint_layout"
