--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,12 +6,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context="com.fit3162.scannera_app.MainActivity">
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingBottom="@dimen/sv_main_padding_bottom"
-        tools:context=".Fragments.AccountFragment">
+        tools:context="com.fit3162.scannera_app.Fragments.AccountFragment">
 
         <LinearLayout
             android:id="@+id/user_info_top"
