--- a/app/src/main/res/layout/activities_with_product_list.xml
+++ b/app/src/main/res/layout/activities_with_product_list.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ScanHistoryActivity">
+    tools:context="com.fit3162.scannera_app.ScanHistoryActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
