--- a/app/src/main/res/layout/activity_account_info.xml
+++ b/app/src/main/res/layout/activity_account_info.xml
@@ -6,7 +6,7 @@
     android:id="@+id/account_info_scrollview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AccountInfoActivity">
+    tools:context="com.fit3162.scannera_app.AccountInfoActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
