--- a/app/src/main/res/layout/activity_chat_bot.xml
+++ b/app/src/main/res/layout/activity_chat_bot.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChatBotActivity">
+    tools:context="com.fit3162.scannera_app.ChatBotActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar"
