--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -6,7 +6,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    tools:context=".ForgottenPasswordActivity"
+    tools:context="com.fit3162.scannera_app.ForgottenPasswordActivity"
     >
 
     <androidx.constraintlayout.widget.ConstraintLayout
