--- a/app/src/main/res/layout/activity_product_information.xml
+++ b/app/src/main/res/layout/activity_product_information.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ProductInformationActivity">
+    tools:context="com.fit3162.scannera_app.ProductInformationActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
