--- a/app/src/main/res/layout/cardview_product_review.xml
+++ b/app/src/main/res/layout/cardview_product_review.xml
@@ -13,7 +13,8 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="5dp">
 
         <com.mikhaellopez.circularimageview.CircularImageView
             android:layout_marginStart="12dp"
