limited email address field in the forgotten password activity to be one maxlined.

--- a/app/src/main/res/layout/activity_forgotten_password.xml
+++ b/app/src/main/res/layout/activity_forgotten_password.xml
@@ -95,6 +95,7 @@
                 android:layout_height="match_parent"
                 android:hint="@string/email_sign_up"
                 android:maxLength="45"
+                android:maxLines="1"
                 tools:ignore="TouchTargetSizeCheck" />
 
         </com.google.android.material.textfield.TextInputLayout>
