limited fields in the sign up activity to be one maxlined.

--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -60,6 +60,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/username_sign_up"
+                android:maxLines="1"
                 android:maxLength="10" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -80,6 +81,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/firstname_sign_up"
+                android:maxLines="1"
                 android:maxLength="25" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -100,6 +102,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/lastname_sign_up"
+                android:maxLines="1"
                 android:maxLength="25" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -120,6 +123,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:hint="@string/email_sign_up"
+                android:maxLines="1"
                 android:maxLength="45" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -141,6 +145,7 @@
                 android:layout_height="match_parent"
                 android:inputType="textPassword"
                 android:hint="@string/password"
+                android:maxLines="1"
                 android:maxLength="20" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -162,6 +167,7 @@
                 android:layout_height="match_parent"
                 android:hint="@string/confirm_password_sign_up"
                 android:inputType="textPassword"
+                android:maxLines="1"
                 android:maxLength="20" />
 
         </com.google.android.material.textfield.TextInputLayout>
