Updated some minor ui changes based on usability feedback.

--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -103,6 +103,7 @@
                     android:inputType="textAutoComplete"
                     android:hint="@string/category_drop_down_menu_hint"
                     android:maxLength="50"
+                    android:maxLines="1"
                     />
             </com.google.android.material.textfield.TextInputLayout>
 
