--- a/app/src/main/res/layout/dialog_edit.xml
+++ b/app/src/main/res/layout/dialog_edit.xml
@@ -33,6 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
+            android:maxLines="1"
             android:hint="@string/enter_info_hint"
             android:maxLength="50"/>
     </com.google.android.material.textfield.TextInputLayout>
