--- a/app/src/main/res/layout/dialog_product_feed_tv_edit_category.xml
+++ b/app/src/main/res/layout/dialog_product_feed_tv_edit_category.xml
@@ -33,6 +33,7 @@
             android:inputType="textAutoComplete"
             android:hint="@string/category_drop_down_menu_hint"
             android:maxLength="50"
+            android:maxLines="1"
             />
     </com.google.android.material.textfield.TextInputLayout>
 
