Some usability improvements based on the feedback received during the tests.

--- a/app/src/main/res/layout/activity_product_feed.xml
+++ b/app/src/main/res/layout/activity_product_feed.xml
@@ -376,7 +376,7 @@
                 style="@style/Widget.Scannera.ProductFeedTextView"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/product_look"
+                android:text="@string/product_pic"
                 android:textColor="?attr/colorPrimaryDark"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
@@ -400,7 +400,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:layout_marginTop="12dp"
-            android:contentDescription="@string/product_look_content_description"
+            android:contentDescription="@string/product_pic_content_description"
             app:layout_constraintEnd_toEndOf="@id/end_v_guideline"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="@id/start_v_guideline1"
