--- a/app/src/main/res/layout/activities_with_product_list.xml
+++ b/app/src/main/res/layout/activities_with_product_list.xml
@@ -44,7 +44,10 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@id/title_barrier"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@android:color/darker_gray"
+        android:scrollbarSize="@dimen/general_scrollbar_size"/>
 
     <androidx.constraintlayout.widget.Barrier
         android:id="@+id/title_barrier"
