--- a/app/src/main/res/layout/fragment_product_reviews.xml
+++ b/app/src/main/res/layout/fragment_product_reviews.xml
@@ -58,6 +58,9 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical"
+        android:scrollbarThumbVertical="@android:color/darker_gray"
+        android:scrollbarSize="@dimen/general_scrollbar_size"/>
 
 </LinearLayout>
